--- a/src/blogspage/singleblog.css
+++ b/src/blogspage/singleblog.css
@@ -1,6 +1,6 @@
 
 .single-blog-blog-content-wrapper {
-    max-width: 1400px; 
+    max-width: 1200px; 
     margin: 0 auto; 
     padding: 20px;
 }
@@ -21,14 +21,18 @@
 
 
 .single-blog-blog-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    padding-top: 40px;
-    max-width: 1392px;
+    max-width: 1200px; 
+    height: 700px;
+    border-radius: 55px;
     display: block;
-    margin: 0 auto 20px auto;
-    border-radius: 10px;
-    height: 766px;
-    padding-bottom: 10px;
+    margin: 0 auto;
+    padding-top: 40px;
+
+    
 }
 
 
@@ -83,3 +87,4 @@
     height: 30px;
     width: 30px;
 }
+
